# cli-n7

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yml  install.sh
.github/workflows/: ci.yml  ci_pr.yml  release-please.yml  release.yml  test.yml
src/: constants.rs  main.rs  test_utils.rs
src/assets/: logo.txt
src/cargo_cmd/: builder.rs  mod.rs
src/cargo_cmd/service/: clippy.rs  fmt.rs  llvm_cov.rs  mod.rs  test.rs
src/docker_compose/: builder.rs  command.rs  mod.rs
src/docker_compose/service/: cargo_exec.rs  down.rs  exec.rs  logs.rs  mod.rs  shell.rs  up.rs
src/resolvers/: compose_file.rs  compose_services.rs  env_file.rs  mod.rs  tools.rs
tests/: cmd_dc_cargo.rs  cmd_dc_down.rs  cmd_dc_exec.rs  cmd_dc_logs.rs  cmd_dc_shell.rs  cmd_dc_up.rs  cmd_version.rs
tmp/coverage/html/: index.html
tmp/coverage/html/coverage/app/src/: main.rs.html
tmp/coverage/html/coverage/app/src/docker_compose/: builder.rs.html  command.rs.html
tmp/coverage/html/coverage/app/src/docker_compose/service/: up.rs.html
