[package]
name = "n7"
version = "0.6.1"
edition = "2021"
rust-version = "1.91.1"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
console = "0.16.1"
dialoguer = "0.12.0"
indicatif = "0.18.3"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.1.1"
ctor = "0.6.3"
predicates = "3.1.3"
tempfile = "3.23.0"
